fix: :bug: Fixed a flickering of the loading screen on fade out

--- a/src/styles/loading-screen.css
+++ b/src/styles/loading-screen.css
@@ -7,17 +7,11 @@
   overflow: hidden;
   position: fixed;
   z-index: 100;
+  opacity: 1;
+  transition: opacity 1s ease-in-out;
 }
 .loading-screen.fade-out {
-  animation: fade-out 1s ease infinite backwards;
-}
-@keyframes fade-out {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
+  opacity: 0;
 }
 
 /**
